--- a/app/views/wines/show.html.erb
+++ b/app/views/wines/show.html.erb
@@ -1,7 +1,12 @@
 <div id="comment_form"  style="display: none" >
 
 </div>
+<div id="add_to_cellar_form"  style="display: none" >
+
+</div>
+
 <div class="wine_profile">
+  <%= render_stickies %>
   <div class="left">
     <div class="box title">
      <h2>
