--- a/app/views/wines/share/_photos.html.erb
+++ b/app/views/wines/share/_photos.html.erb
@@ -6,7 +6,7 @@
 </h3>
 
 <div class="items">
-  <% (1..6).each do |i| %>
-    <%= link_to image_tag("v2/test/m_w_3.png"), "/" %>
+  <% @wine_detail.photos.each do |photo| %>
+    <%= link_to image_tag(photo.image_url(:w_thumb), :width => 90, :height => 90), "/" %>
   <% end %>
 </div>
