--- a/app/views/wines/share/_vintage.html.erb
+++ b/app/views/wines/share/_vintage.html.erb
@@ -1,5 +1,7 @@
 <p><strong>更多年份</strong></p>
-<% (1..7).each do |i| %>
-<%= link_to "2002", :controller => "items", :action => "edit", :id => @item %>
+<% @wine_detail.all_vintage.each do  |v| %>
+  <a href="#" <%= v == @wine_detail.year ? 'class="current"' : '' %>><%= v %></a>
 <% end %>
-<%= link_to "...", :controller => "items", :action => "edit", :id => @item %>
+
+
+<%= link_to "显示更多年份", { :controller => "wines", :action => "list", :wine_id => @wine_detail.wine_id }, { :class => "year_more" }  %>
