--- a/app/views/wines/share/_owners.html.erb
+++ b/app/views/wines/share/_owners.html.erb
@@ -5,14 +5,14 @@
   </span>
 </h3>
 
-<% (1..4).each do |i| %>
+<% @owners.each do |cellar_item| %>
   <div class="item">
     <div class="pic">
-      <%= link_to (image_tag "v2/test/u_2.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
+      <%= link_to_user cellar_item.user, users_path(cellar_item.user), :with_avatar => true, :avatar_version => :middle %>
     </div>
     <div class="text">
-      <h4>Sharen</h4>
-      <p>2支 | 单价: ¥240.00</p>
+      <h4><%= link_to_user cellar_item.user,  users_path(cellar_item.user) %></h4>
+      <p><%= cellar_item.number %>支 | 单价: ¥<%= cellar_item.price %></p>
     </div>
   </div>
 <% end %>
