--- a/app/views/mine/share/_following_wines.html.erb
+++ b/app/views/mine/share/_following_wines.html.erb
@@ -1,12 +1,12 @@
 <div class="large_list">
-<% (1..2).each do |i| %>
   <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
-<% end %>
+  <%= link_to (image_tag "v2/test/m_w_1.png", :align => "left" ), :controller => "items", :action => "edit", :id => @item %>
 </div>
 
+<% if @cellar.items.length > 1 %>
 <div class="small_list">
-<% (1..4).each do |i| %>
+<% (2..8).each do |i| %>
   <%= link_to (image_tag "v2/test/m_w_2.png", :align => "center"), :controller => "items", :action => "edit", :id => @item %>
 <% end %>
 </div>
-
+<% end %>
