--- a/public/template/album_photo_upload.html
+++ b/public/template/album_photo_upload.html
@@ -24,7 +24,7 @@
     <div id="span950">
     <div id="hp" class="min_height" >
           <div class="hp_header">
-            <div class="hp_right"><a href="#" class="btn_red_sb"><span>我的酒窖</span></a></div>
+            <div class="hp_right"><a href="cellar.html" class="btn_red_sb"><span>我的酒窖</span></a></div>
             <div class="hp_userimg"><a href="#"><img src="image/userimage/p130.jpg" width="130" height="130" alt="usrename" /></a></div>
             <div class="hp_info">
                 <div class="username">不良夏生</div>
