--- a/public/template/cellar_people.html
+++ b/public/template/cellar_people.html
@@ -48,10 +48,9 @@
           </div>
       <div id="cellar">
           <div class="title_btn">
-                <h1>我的酒窖 <span class="font12">(共15支)</span></h1>
+                <h1>不良夏生的酒窖 <span class="font12">(共15支)</span></h1>
           </div>
           <div class="sort_search mb20">
-              <div class="float_r"><a href="cellar_wine_add_search.html" class="btn_blue_b"><span>添加藏酒</span></a></div>
               <div class="sort pt5">排序 <select name="">
                 <option>价格</option>
                 <option>数量</option>
@@ -70,8 +69,6 @@
                 <th class="count">数量</th>
                 <th class="price">购入价格</th>
                 <th class="place">所在地</th>
-                <th>&nbsp;</th>
-                <th>&nbsp;</th>
               </tr>
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="image/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
@@ -88,8 +85,6 @@
                 <td class="count">3</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
-                <td class="control"><a href="cellar_wine_edit.html" class="icon_edit">修改</a></td>
-                <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="image/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
@@ -106,8 +101,6 @@
                 <td class="count">3</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
-                <td class="control"><a href="#" class="icon_edit">修改</a></td>
-                <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="image/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
@@ -124,8 +117,6 @@
                 <td class="count">3</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
-                <td class="control"><a href="#" class="icon_edit">修改</a></td>
-                <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="image/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
@@ -142,8 +133,6 @@
                 <td class="count">3</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
-                <td class="control"><a href="#" class="icon_edit">修改</a></td>
-                <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
               <tr>
                 <td class="img"><a href="wine_profile.html"><img src="image/test/wine50.jpg" width="50" height="50" alt="wine name" /></a></td>
@@ -160,11 +149,9 @@
                 <td class="count">3</td>
                 <td class="price">￥175.00/支</td>
                 <td class="place">上海</td>
-                <td class="control"><a href="#" class="icon_edit">修改</a></td>
-                <td><a href="#" class="icon_delet">删除</a></td>
               </tr>
             </table>
-          </div>
+        </div>
           <div class="pagination">
               <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
           </div>
