Update: reply comment
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/wines/share/_comment_reply_form.html.erb
+++ b/app/views/wines/share/_comment_reply_form.html.erb
@@ -1,5 +1,6 @@
 <%= form_for @comment, :url => {:action => "comment_reply", :comment_id => @comment.id }, :method => :post, :remote => true do |f| -%>
-  <p> 回复: </p>
+<%= hidden_field_tag "wine_detail_id", @wine_detail.id %> 
+ <p> 回复: </p>
   <p><%= text_area_tag "comment[body]" %></p>
   <p><%= image_submit_tag "保存" %>
 <% end -%>
