--- a/app/views/mine/albums/show.html.erb
+++ b/app/views/mine/albums/show.html.erb
@@ -2,58 +2,52 @@
 <%= render "/mine/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
-<div class="title_btn clearfix">
-
-        <%= link_to url_for(:action => :index), :class => "button_gray float_r" do %>
-        <span>返回相册首页</span>
-        <% end %>
-
-        <%= link_to url_for(:action => :upload, :album_id => params[:album_id]), :class => "button_gray float_r mr5" do %>
-        <span>添加照片</span>
-        <% end %>
-
-        <%= link_to url_for(:action => :edit, :album_id => @album.id), :class => "button_gray float_r mr5" do %>
-        <span>编辑相册属性</span>
-        <% end %>
-
-        <h2><%= @user.username %>的相册-<%= @album.name %> <span class="count_b">(共<%= @photos.total_count %>张)</span></h2>
-
+<div class="title_btn">
+  <div class="btn_action">
+    <a href="<%= url_for(:action => :edit, :album_id => @album.id)%>" class="btn_gray mr5">
+      <span>编辑相册属性</span>
+    </a>
+    <a href="<%= url_for(:action => :upload, :album_id => params[:album_id]) %>" class="btn_gray mr5">
+      <span>添加照片</span>
+    </a>
+    <a href="<%= url_for(:action => :index) %>" class="btn_gray">
+      <span>返回相册首页</span>
+    </a>
+  </div>
+  <h1><%= @album.name %> <span class="font12">(共<%= @album.photos_num%>张)</span></h1>
+  <div class="clear"></div>
 </div>
-<div class="album_intro"><%= @album.intro %></div>
 
-<div class="photolist">
+
+<ul class="photo_list">
   <% @photos.each_with_index do |photo, i| %>
-    <div class="photo_list_item">
-      <div class="thumb">
-        <a href="<%= url_for :action => 'photo', :album_id => @album.id, :index => i %>">
-          <%= image_tag photo.image_url :normal %>
-        </a>
-      </div>
+    <li>
+      <a href="<%= url_for :action => 'photo', :album_id => @album.id, :index => i %>">
+        <%= image_tag photo.image_url( :normal ), :class => 'cover' %>
+      </a>
       <% if photo.intro.present? %>
-        <div class="description">
+        <p class="intro">
           <% if @is_owner %>
           <%= best_in_place photo, :intro, {:path => {:action => 'update_photo_intro', :photo_id => photo.id } } %>
           <% else %>
           <%= photo.intro %>
           <% end %>
-        </div>
+        </p>
       <% elsif @is_owner %>
-        <div class="description">
+        <p class="intro">
           <%= best_in_place photo, :intro, { :nil => '点击添加描述', :path => {:action => 'update_photo_intro', :photo_id => photo.id} } %>
-        </div>
+        </p>
       <% end %>
-      <div class="photo_info"><%= photo.created_at.strftime '%Y-%m-%d'%> 上传 |
-        <a href="<%= url_for :action => 'delete_photo', :photo_id => photo.id %>" class="fancybox_delete_photo fancybox.ajax">删除</a>
-        <br/>
-        <%= photo.viewed_num%>浏览 | <%= photo.liked_num%>喜欢 | <a href="community_photo_detail.html"><%= photo.commented_num%>评论</a>
-      </div>
-        <% if photo.is_cover == 1 %>
-        <br/>封面
-        <% end %>
-    </div>
+      <p class="info">
+        <%= photo.created_at.strftime '%Y-%m-%d'%> 上传 | 
+        <a href="<%= url_for :action => 'delete_photo', :photo_id => photo.id %>" class="fancybox_delete_photo fancybox.ajax">删除</a><br/>
+      <%= photo.viewed_num%>浏览 | <%= photo.commented_num%>评论 | 2赞
+      </p>
+    </li>
   <% end %>
   <div class="clear"></div>
-</div>
+</ul>
+
 <div class="pagination">
  <%= paginate @photos, :outer_window => 2 %>
 </div>
@@ -76,7 +70,5 @@ function delete_upload_photo( id ){
 
 $('.best_in_place').best_in_place();
 </script>
-
 <!-- end mine -->
 </div>
-
