--- a/app/views/mine/index.html.erb
+++ b/app/views/mine/index.html.erb
@@ -26,7 +26,7 @@
     <div class="clear"></div>
     <div class="box box_4 simple_comments">
       <h3>评论<span class="font_12"><%= link_to "("+@comments.length.to_s+"条, 更多)", :controller => "/mine/cellars" %></span> </h3>
-      <%= render @comments %>
+      <%#= render @comments %>
       <!-- .box end -->
     </div>
     <!-- left end -->
