--- a/app/views/wines/testing_notes/_testing_note.html.erb
+++ b/app/views/wines/testing_notes/_testing_note.html.erb
@@ -1,6 +1,7 @@
 <h4 class="relative">
   <!-- TODO: 请换成正确的用户 -->
-  <%= link_to_user current_user, users_path(current_user), :with_avatar => true, :avatar_version => :thumb %>
+ 
+  <%#= link_to_user current_user, users_path(current_user), :with_avatar => true, :avatar_version => :thumb %>
   <%= link_to "对2001拉菲珍宝的酒评", :controller => "items", :action => "edit", :id => @item %>
 <br />
   <span class="time"> 2011-12-23 </span>
