--- a/app/views/wines/share/_buttons.html.erb
+++ b/app/views/wines/share/_buttons.html.erb
@@ -3,33 +3,53 @@
 </div>
 <div class="add">
   <ul>
+	<%  if user_signed_in? %>
+	
     <li>
       <%  if @wine_detail.is_followed? current_user %>
-      <%= link_to "取消关注", { :action => "cancle_follow",
+      <%= link_to "取消关注", {:controller => "wines/comments", :action => "cancle_follow",
                         :wine_detail_id => params[:wine_detail_id]},
                         :class => "follow_wine ajax" %>
-      <%= link_to "编辑", { :action => "follow",
+      <%= link_to "编辑", { :controller => "wines/comments", :action => "follow",
                         :wine_detail_id => params[:wine_detail_id]},
                         :remote => true,
                         :class => "follow_wine ajax" %>
         <% else %>
-      <%= link_to "", { :action => "follow",
+      <%= link_to "", {:controller => "/wines/comments", :action => "follow",
                         :wine_detail_id => params[:wine_detail_id]},
                         :remote => true,
                         :class => "follow_wine compass_buttons-follow_wine ajax" %>
       <% end %>
     </li>
-    <li><%= link_to "", { :action => :comment,
+    <li><%= link_to "", {:controller => "wines/comments", :action => :create,
                           :wine_detail_id => params[:wine_detail_id],
                           :do => "comment"},
                           :remote => true,
                           :class => "comment compass_buttons-comment ajax"%></li>
-    <li><%= link_to "", { :action => :follow_wine },
+    <li><%= link_to "", {:controller => "wines/comments", :action => :follow_wine },
                           :class => "testint_note compass_buttons-testing_note ajax"%></li>
-    <li><%= link_to "", { :action => :add_to_cellar,
+    <li><%= link_to "", {:controller => "wines", :action => :add_to_cellar,
                         :wine_detail_id => params[:wine_detail_id]},
                           :remote => true,
                           :class => "add_to_cellar compass_buttons-add_to_cellar ajax"%></li>
+<% else %>
+<li><%= link_to "", "/wines/comments/follow?wine_detail_id=#{@wine_detail.id}",
+                  :remote => true,
+                  :class => "follow_wine compass_buttons-follow_wine ajax" %></li>
+
+<li><%= link_to "", {:controller => "wines/comments", :action => :create,
+                      :wine_detail_id => params[:wine_detail_id],
+                      :do => "comment"},
+                      :remote => true,
+                      :class => "comment compass_buttons-comment ajax"%></li>
+<li><%= link_to "", {:controller => "wines/comments", :action => :follow_wine },
+                      :class => "testint_note compass_buttons-testing_note ajax"%></li>
+<li><%= link_to "", {:controller => "wines", :action => :add_to_cellar,
+                    :wine_detail_id => params[:wine_detail_id]},
+                      :remote => true,
+                      :class => "add_to_cellar compass_buttons-add_to_cellar ajax"%></li>
+
+<% end %>
   </ul>
   <!-- add end -->
 </div>
