--- a/app/assets/stylesheets/v2/user_album.css.scss
+++ b/app/assets/stylesheets/v2/user_album.css.scss
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 #hp {background:url(../image/bg/bg_headerline.gif) repeat-x left 130px;padding:30px 40px;}
 .hp_header {margin:0 0 50px 0;}
 .hp_userimg {float:left;width:130px;margin:0 20px 0 0;}
@@ -9,11 +8,11 @@
 .hp_info .mystatu span {display:inline-block;margin-left:20px;}
 .hp_info ul.hp_navi{position:absolute; width:550px;top:100px;}
 .hp_navi li {float:left;height:50px}
-.hp_navi li a {display:block;height:38px;padding:7px 15px 0 15px;text-align:center;color:#333;}
+.hp_navi li a {display:block;height:38px;padding:7px 15px 0 15px;text-align:center;color:#333;float:left;}
 .hp_navi li a:hover {background:url(../image/bg/bg_navi.gif) repeat-x left top;text-decoration:none;}
 .hp_navi li.current a {background:url(../image/bg/bg_navi.gif) repeat-x left top;}
 .btn_action, .share_btn .btn {float:right;}
-.title_btn {margin:0 0 30px 0;}
+#hp .title_btn {margin:0 0 30px 0;}
 .title_btn h1 {font-size:18px;}
 .album_right h2 {font-size:14px;}
 .side_album_list h3 {font-size:12px;}
@@ -45,5 +44,5 @@ img.cover_s {background:url(../image/bg/bg_album_s.gif) no-repeat left top;paddi
 .side_album_list li {margin:0 0 30px 0;}
 .add_album {margin:0 0 0 20px;}
 input.photo_name, textarea.photo_des {width:184px;}
-textarea.photo_des {min-height: 70px;} 
+textarea.photo_des {min-height: 70px; width:40px}
 li.photo_des p {margin: 0 0 5px 0;}
