--- a/app/views/mine/albums/photo.html.erb
+++ b/app/views/mine/albums/photo.html.erb
@@ -1,4 +1,5 @@
 <div class="content">
+   <div class="album_left">
 <div class="title_btn">
   <h1><%= @album.name %> <span class="font12">(共<%= @album.photos_num %>张)</span></h1>
 </div>
@@ -30,20 +31,20 @@
   </div>
   <div class="share float_r">分享到：
     <a href=" #">
-      <img src="image/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" />
+      <img src="/assets/v2/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" />
     </a>
     <a href="#">
-      <img src="image/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" />
+      <img src="/assets/v2/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" />
     </a>
     <a href="#">
-      <img src="image/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" />
+      <img src="/assets/v2/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" />
     </a>
     <a href="#">
-      <img src="image/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" />
+      <img src="/assets/v2/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" />
     </a>
     <a href="#">
-      <img src="image/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" />
-    </a> |
+      <img src="/assets/v2/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" />
+    </a> 
   </div>
   <div><%= @photo.viewed_num %>浏览 | <%= @photo.commented_num %>评论</div>
 </div>
@@ -113,22 +114,28 @@
                      <div class="clear"></div>
                 </div>
         </div>
+   </div>
   <div class="album_right pt60 pl30">
        	  <h2>我的其他相册</h2>
+          <% if @top_albums.present? %>
             <ul class="side_album_list">
-            	<li> <a href="album_photo_list.html"><img class="cover_s" src="image/test/pic100_1.jpg" width="100" height="100" alt="album" /></a>
-                    <h3><a href="album_photo_list.html">吃货那点事儿</a></h3>
-                  <p class="info">2012-1-28更新</p>
-                </li>
-                <li> <a href="album_photo_list.html"><img class="cover_s" src="image/test/pic100_1.jpg" width="100" height="100" alt="album" /></a>
-                    <h3><a href="album_photo_list.html">吃货那点事儿</a></h3>
-                  <p class="info">2012-1-28更新</p>
-                </li>
-                <li> <a href="album_photo_list.html"><img class="cover_s" src="image/test/pic100_1.jpg" width="100" height="100" alt="album" /></a>
-                    <h3><a href="album_photo_list.html">吃货那点事儿</a></h3>
-                  <p class="info">2012-1-28更新</p>
-                </li>
+              <% @top_albums.each do |album| %>
+            	<li>
+                <a href="<%= url_for :action => 'show', :album_id => album.id %>">
+                  <% if album.cover.present? %>
+                  <%= image_tag album.cover.image_url :thumb %>
+                  <% else %>
+                  <img src="/assets/base/test/album_cover1.jpg" alt="木有图片" width="190" height="190" />
+                  <% end %>
+                </a>
+                <h3>
+                  <a href="<%= url_for :action => 'show', :album_id => album.id %>"><% album.name %></a>
+                </h3>
+                <p class="info">2012-1-28更新</p>
+              </li>
+              <% end %>
             </ul>
+          <% end %>
         </div>
         <div class="clear"></div>
       </div>
