--- a/app/views/friends/sync.html.erb
+++ b/app/views/friends/sync.html.erb
@@ -32,7 +32,7 @@
 <table width="100%" cellspacing="0" cellpadding="0" border="0">
   <tr>
     <td valign="middle" width="100px" >
-      共找到{<%= @recommend_friends.length %>}个好友
+      共找到<%= @recommend_friends.length %>个好友
     </td>
     <td valign="top">
       <% if @recommend_friends.length > 0 %>
