--- a/app/views/mine/albums/edit.html.erb
+++ b/app/views/mine/albums/edit.html.erb
@@ -1,5 +1,5 @@
 <div class="<%= controller_name  %> albums">
-<%= render "/mine/sub_nav", :action => params[:action] %>
+<%#= render "/mine/sub_nav", :action => params[:action] %>
 <div class="clear"></div>
 
 <div id="cu_user_menu" class="clearfix">
@@ -22,6 +22,5 @@
   <p class="mb20">相册总容量1G</p>
 </div>
 <div class="clear"></div>
-
 <!-- end mine -->
 </div>
