--- a/app/views/mine/albums/upload.html.erb
+++ b/app/views/mine/albums/upload.html.erb
@@ -21,7 +21,7 @@
   </div>
 </div>
 <div id="rightcol">
-  <p class="mb20">相册总容量1G</p>
+  <p class="mb20">相册总容量xxxG</p>
 </div>
 <div class="clear"></div>
 <script type="text/javascript">
@@ -98,6 +98,5 @@
 
 $('.new_album').fancybox({padding:0, margin: 0, width: 450, height: 'auto', autoSize: false, modal: true});
 </script>
-
 <!-- end mine -->
 </div>
